Closed Bug 334690 Opened 19 years ago Closed 19 years ago

Can't click links inside table with display:inline (can't view talkbacks in ynet.co.il)

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: uriber, Assigned: roc)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Go to http://www.ynet.co.il/articles/0,7340,L-3240223,00.html , scroll down to the talkback section (the numbered list on the bottom), and try clicking any of the items. The cursor does not change to a hand when hovering the items, and clicking them does nothing. Clickoing the items should open the talkback content. A minimal testcase is coming up, showing that this happens to any link which is inside a table with style="display: inline;". This regressed between 2006-04-17-05 and 2006-04-17-23. Bonsai query: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-04-17+04%3A00&maxdate=2006-04-18+00%3A00&cvsroot=%2Fcvsroot My money is on bug 333481.
Attached file testcase
minimal testcase.
Flags: blocking1.9a1?
Keywords: testcase
Bug 335030 might be related.
Blocks: 333481
Same problem with links @ http://www.vai.com The items in the list on top-right should be links, but even mouseover event doesn't seem to be dispatched and links don't work.
OS: MacOS X → All
Attached patch fixSplinter Review
Basically this is what was happening: a table was asked to build display lists, where the passed-in display list set had the same list pointed to by BorderBackground() and Background(). It created a new border-background list to temporarily override the passed-in one, and then passed the resulting set of lists down to children for filling in. These children added background items for the inlines to the Background() list, which was the original BorderBackground() list. So then later when we appended table part backgrounds to the original BorderBackground() list, they were appended after the backgrounds for the inline content. The solution is to use completely separate lists for the descendants' items in this event-handling case. This ensures there will be no accidental aliasing.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #219979 - Flags: review?(bernd_mozilla)
Blocks: 335449
Attachment #219979 - Flags: review?(bernd_mozilla) → review+
Hardware: Macintosh → All
checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified FIXED using build 2006-05-01-06 of SeaMonkey trunk on Windows XP with: http://www.vai.com and https://bugzilla.mozilla.org/attachment.cgi?id=219037&action=view as testcases.
Status: RESOLVED → VERIFIED
Flags: blocking1.9a1?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: