Bug 334690. Fix regression in z-ordering of table cell content for event handling. r=bernd